Fix json editor height issue on safari #9

--- a/src/app/components/explorer/explorer.component.css
+++ b/src/app/components/explorer/explorer.component.css
@@ -36,12 +36,13 @@ nz-sider {
 .right-layout nz-content {
   /* margin: 24px 16px 0; */
   overflow: initial;
+  display: flex;
 }
 .inner-content {
   display: flex;
   flex-direction: column;
   width: 100%;
-  height: 100%;
+  min-height: 100%;
   padding: 20px;
 }
 .inner-content > div.full-height {
